--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -66,13 +66,13 @@
                                 </li>
                                 <li class="ms-nav-item link">
                                     <!--<a href="blog.html" data-type="page-transition">Blog</a>-->
-                                    <a href="gallery.html" data-type="page-transition">Photography</a>
+                                    <a href="pages/gallery.html" data-type="page-transition">Photography</a>
                                 </li>
                                 <li class="ms-nav-item link">
-                                    <a href="about.html" data-type="page-transition">About</a>
+                                    <a href="pages/about.html" data-type="page-transition">About</a>
                                 </li>
                                 <li class="ms-nav-item link">
-                                    <a href="contact.html" data-type="page-transition">Contact</a>
+                                    <a href="pages/contact.html" data-type="page-transition">Contact</a>
                                 </li>
                             </ul>
                         </nav>
@@ -111,7 +111,7 @@
 
                                     <!-- Work Item -->
                                     <div class="grid-item anime-item work-item col-md-6 col-xs-12 industryProject">
-                                        <a href="work-CloudRoamer.html" class="box work-image" data-type="page-transition">
+                                        <a href="pages/work-CloudRoamer.html" class="box work-image" data-type="page-transition">
                                             <div class="box-cover">
                                                 <div class="box-img" style="background-image: url(assets/images/works/Cover_CloudRoamer.png)"></div>
                                                 <div class="box-hover"></div>
@@ -129,7 +129,7 @@
                                     <!-- /Work Item -->
                                     <!-- Work Item -->
                                     <div class="grid-item anime-item work-item col-md-6 col-xs-12 industryProject">
-                                        <a href="work-VCS.html" class="box work-image" data-type="page-transition">
+                                        <a href="pages/work-VCS.html" class="box work-image" data-type="page-transition">
                                             <div class="box-cover">
                                                 <div class="box-img" style="background-image: url(assets/images/works/Cover_vcs.png)"></div>
                                                 <div class="box-hover"></div>
@@ -147,7 +147,7 @@
                                     <!-- /Work Item -->
                                     <!-- Work Item -->
                                     <div class="grid-item anime-item work-item col-md-6 col-xs-12 industryProject">
-                                        <a href="work-ARStory.html" class="box work-image" data-type="page-transition">
+                                        <a href="pages/work-ARStory.html" class="box work-image" data-type="page-transition">
                                             <div class="box-cover">
                                                 <div class="box-img" style="background-image: url(assets/images/works/Cover_arstory.png)"></div>
                                                 <div class="box-hover"></div>
@@ -165,7 +165,7 @@
                                     <!-- /Work Item -->
                                     <!-- Work Item -->
                                     <div class="grid-item anime-item work-item col-md-6 col-xs-12 personalProject">
-                                        <a href="work-Luo.html" class="box work-image" data-type="page-transition">
+                                        <a href="pages/work-Luo.html" class="box work-image" data-type="page-transition">
                                             <div class="box-cover">
                                                 <div class="box-img" style="background-image: url(assets/images/works/Cover_luo.jpg)"></div>
                                                 <div class="box-hover"></div>
@@ -183,7 +183,7 @@
                                     <!-- /Work Item -->
                                     <!-- Work Item -->
                                     <div class="grid-item anime-item work-item col-md-6 col-xs-12 personalProject">
-                                        <a href="work-ThrowPhone.html" class="box work-image" data-type="page-transition">
+                                        <a href="pages/work-ThrowPhone.html" class="box work-image" data-type="page-transition">
                                             <div class="box-cover">
                                                 <div class="box-img" style="background-image: url(assets/images/works/Cover_throwphones.png)"></div>
                                                 <div class="box-hover"></div>
@@ -201,7 +201,7 @@
                                     <!-- /Work Item -->
                                     <!-- Work Item -->
                                     <div class="grid-item anime-item work-item col-md-6 col-xs-12 personalProject">
-                                        <a href="work-Photobombing.html" class="box work-image" data-type="page-transition">
+                                        <a href="pages/work-Photobombing.html" class="box work-image" data-type="page-transition">
                                             <div class="box-cover">
                                                 <div class="box-img" style="background-image: url(assets/images/works/Cover_photobombing.png)"></div>
                                                 <div class="box-hover"></div>
@@ -219,7 +219,7 @@
                                     <!-- /Work Item -->
                                     <!-- Work Item -->
                                     <div class="grid-item anime-item work-item col-md-6 col-xs-12 personalProject">
-                                        <a href="work-Cube.html" class="box work-image" data-type="page-transition">
+                                        <a href="pages/work-Cube.html" class="box work-image" data-type="page-transition">
                                             <div class="box-cover">
                                                 <div class="box-img" style="background-image: url(assets/images/works/Cover_tower.png)"></div>
                                                 <div class="box-hover"></div>
@@ -237,7 +237,7 @@
                                     <!-- /Work Item -->
                                     <!-- Work Item -->
                                     <div class="grid-item anime-item work-item col-md-6 col-xs-12 uiDesign">
-                                        <a href="work-Letu.html" class="box work-image" data-type="page-transition">
+                                        <a href="pages/work-Letu.html" class="box work-image" data-type="page-transition">
                                             <div class="box-cover">
                                                 <div class="box-img" style="background-image: url(assets/images/works/Cover_letu.jpg)"></div>
                                                 <div class="box-hover"></div>
@@ -255,7 +255,7 @@
                                     <!-- /Work Item -->
                                     <!-- Work Item -->
                                     <div class="grid-item anime-item work-item col-md-6 col-xs-12 uiDesign">
-                                        <a href="work-Qishi.html" class="box work-image" data-type="page-transition">
+                                        <a href="pages/work-Qishi.html" class="box work-image" data-type="page-transition">
                                             <div class="box-cover">
                                                 <div class="box-img" style="background-image: url(assets/images/works/Cover_qishi.jpg)"></div>
                                                 <div class="box-hover"></div>
@@ -273,13 +273,13 @@
                                     <!-- /Work Item -->
                                     <!-- Work Item -->
                                     <div class="grid-item anime-item work-item col-md-6 col-xs-12 uiDesign">
-                                        <a href="work-Weather.html" class="box work-image" data-type="page-transition">
+                                        <a href="pages/work-Weather.html" class="box work-image" data-type="page-transition">
                                             <div class="box-cover">
                                                 <div class="box-img" style="background-image: url(assets/images/works/Cover_weather.jpg)"></div>
                                                 <div class="box-hover"></div>
                                             </div>
                                         </a>
-                                        <a href="work-single-page.html" data-type="page-transition">
+                                        <a href="pages/work-single-page.html" data-type="page-transition">
                                             <div class="work-info">
                                                 <div class="box-inner">
                                                     <span class="box-inner__cat">Personal Project</span>
